web/src/routes/FlashcardRoute.css
.lead {
  width: 100%;
}

.lead > .lvl-0 {
  color: #FFF;
  background-color: #AA0080;
}

.lead > .lvl-1 {
  color: #FFF;
  background-color: #FF8A47;
}

.lead > .lvl-2 {
  color: #FFF;
  background-color: #FFDD00;
}

.lead > .lvl-3 {
  color: #FFF;
  background-color: #7FAE2E;
}

.lead > .lvl-4 {
  color: #FFF;
  background-color: #00a8d7;
}

#flashcard-book-name {
  font-style: italic;
  font-size: small;
}

.flashcard-progress {
  font-style: italic;
  font-size: small;
}

.reveal-btn {
  background-color: #373B43;
  color: #FFF;
}

.reveal-btn:hover {
  color: #FFF;
}

.flashcard-link {
  cursor: pointer;
  font-size: small;
  font-style: italic;
  text-decoration: underline;
  color: #0d6efd;
}

.flashcard-header {
  height: 30px;
}

.last-grade-default {
  border-left: 3px solid transparent;
}

.last-grade-0 {
  border-left: 3px solid #AA0080;
}

.last-grade-1 {
  border-left: 3px solid #FF8A47;
}

.last-grade-2 {
  border-left: 3px solid #FFDD00;
}

.last-grade-3 {
  border-left: 3px solid #7FAE2E;
}

.last-grade-4 {
  border-left: 3px solid #00a8d7;
}

